Final commit on task 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 __pycache__
-test_get_count.py
+testing_get_count.py
 file.json
 2-main.sh
 2-main.py
 db_storage_0.py
 test_fake_db_storage.py
 setup_test_db.sh
+models/engine/tmp_db_storage.py
